AlcoBot v0.5.0 (not released):
  NEW: Added command aliases !dn and !up for !leechers and !uploaders, respectively.
  NEW: Asynchronous FTP client library with SSL and TLS support.
  NEW: Expanded zipscript support to include ioSFV (_tUFF) and Project-ZS (Caladan/esmandil).
  NEW: File containing all available variables (variables.txt).
  NEW: List commands on the configuration dump, ".alcobot dump".
  NEW: Rewrote the command interface, proper support for aliases and flag checking.
  NEW: The "ftpd" module now maintains a connection to the FTP server.
  CHG: Removed the "cmdPrefix" option from [Module::Free].
  CHG: Removed the pre time announces from nxTools.
  CHG: The option names in [Commands] are the base names of commands instead of a pattern.
  FIX: ioZS support, the escape sequences are now properly substituted.
  FIX: Parsing sub-list (loop) values with reserved characters.

AlcoBot v0.4.0 (Oct 7, 2005):
  NEW: Online stats module, to view bandwidth usage and user activity.
  NEW: Support for alternative user/group stores (e.g. ioShareDb). Access
       to ioFTPD's user and group files is now done using shared memory.
  NEW: Tcl version check, to ensure Tcl v8.4, or newer, is present.
  CHG: The ioFTPD directory is now found automatically using the message window,
       so the "rootPath" ioFTPD configuration option is no longer necessary.
  FIX: Login/logout announce for glFTPD when users do not have a tagline.

AlcoBot v0.3.0 (Oct 1, 2005):
  NEW: FTP commands for the invite module: SITE INVITE/INVPASSWD/INVADMIN.
  NEW: Invite module, allows users to join the site channel.
  NEW: Multi-line messages, use "\n" to split announcements onto separate lines.
  NEW: Support for "message" commands.
  NEW: Uniform FTP daemon API for access to user and group files.
  FIX: Blank lines are no longer sent when a theme entry is disabled.
  FIX: Module dependency checks always failed.
  FIX: Use lower/upper case string functions provided by the SQL server, since