@@ -81,11 +81,15 @@ delban   = +flags=o -all
 help     = +target=notice
 
 # nxTools module.
+approve  = +target=notice
 dupe     = +target=notice
 new      = +target=notice
 nukes    = +target=notice
-unnukes  = +target=notice
+reqdel   = +target=notice
+reqfill  = +target=notice
+request  = +target=notice
 undupe   = +flags=o -all
+unnukes  = +target=notice
 
 # Online module.
 who      = +target=notice
