@@ -17,6 +17,11 @@
 [Replace]
 
 [Variables]
+approveAdd   = message:z
+requestAdd   = message:z
+requestDel   = message:z
+requestFill  = message:z
+
 approveHead  =
 approveBody  = user:z group:z releaseName:z age:d num:n
 approveNone  =
