@@ -1,6 +1,6 @@
 # Module Definition File
 desc=nxTools Support
 context=::alcoholicz::NxTools
-depends=
+depends=ftpd invite
 tclFile=modNxTools.tcl
 varFile=modNxTools.vars
